# solana-validator-switch

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  WIKI.md  config.example.yaml
src/: alert_integration_tests.rs  alert_logic_tests.rs  main.rs  solana_rpc.rs  ssh.rs  startup.rs  startup_checks.rs  startup_validation_tests.rs  status_ui_alert_tests.rs  switch_validation_tests.rs  types.rs
src/commands/: status.rs  status_ui_v2.rs  switch.rs  switch_scenarios_test.rs  switch_test.rs  switch_ux_test.rs
tests/: test_config.yaml
wiki/: Configuration.md
